--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 blinker==1.7.0
 click==8.1.7
 Flask==2.1.3
+Flask-Login==0.6.3
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
+Flask-Migrate==2.3.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -9,3 +12,5 @@ MarkupSafe==2.1.3
 SQLAlchemy==1.4.49
 typing_extensions==4.9.0
 Werkzeug==2.2.2
+wtf==0.1
+WTForms==3.1.2
